styles/settings/_breakpoints.scss
@use 'sass:map';
@use 'sass:meta';
/// min-width are widely supported all the way back
/// to browser released on 2010
/// Mobile first approach
/// Meaning the styling should be targeting for
/// Small devices first and make changes as the
/// Screen get larger
$breakpoints: (
  'tablet': (
    min-width: 744px,
  ),
  'desktop': (
    min-width: 1280px,
  ),
  'up-to-desktop': (
    max-width: 1280px,
  ),
  'desktop-large': (
    min-width: 1920px,
  ),
) !default;

@mixin media($breakpoint) {
  @if map.has-key($breakpoints, $breakpoint) {
    @media #{meta.inspect(map.get($breakpoints, $breakpoint))} {
      @content;
    }
  } @else {
    @error "There is no #{$breakpoint} breakpoint.";
  }
}

